Add search functionality to reviews; implement search input and clear button in HTML, CSS, and JavaScript; update review data structure and enhance styling for better user experience.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
                     Reviews
                 </h2>
             </div>
+            <div class="snarkflix-search-container">
+                <input type="text" id="search-input" class="snarkflix-search-input" placeholder="Search for movies, actors, or keywords..." aria-label="Search reviews">
+                <button id="clear-search-btn" class="snarkflix-clear-search-btn" aria-label="Clear search" style="display: none;">×</button>
+            </div>
             <div class="snarkflix-reviews-grid" id="reviews-grid">
                 <!-- Reviews will be dynamically loaded here -->
             </div>
@@ -198,7 +202,7 @@
                 <div class="snarkflix-about-text">
                     <h2 class="snarkflix-section-title">About Snarkflix</h2>
                     <p>
-                        At Snarkflix, we are a small but mighty team consisting of a single reviewer and our trusty sidekick, a Bernedoodle. Despite our size, we are passionate about movies and love nothing more than sharing our thoughts and opinions with others. Our unique sense of humor sets us apart from the rest, as we take a lighthearted and entertaining approach to critiquing films.
+                        At Snarkflix, we are a small but mighty team of one reviewer, one Robot programed with nothing but snark and sarcasm and our goofy Bernedoodle sidekick. Despite our size, we are passionate about movies and love nothing more than sharing our thoughts and opinions with others. Our unique sense of humor sets us apart from the rest, as we take a lighthearted and entertaining approach to critiquing films.
                     </p>
                     <p>
                         We know that not every movie is a masterpiece, and even the best movies have their flaws. However, we believe that every film has something to offer, whether it's good, bad, or just plain weird. Our goal is not to tear down movies or insult filmmakers, but to provide our readers with an enjoyable and humorous perspective on cinema.
