Add dynamic social media meta tags for review sharing
- Add updateMetaTag() helper function to dynamically update Open Graph and Twitter Card meta tags
- Add getAbsoluteUrl() helper function to handle image URLs for social sharing
- Update createReviewPage() to set review-specific meta tags (title, description, image, URL)
- Update returnToHomepage() to reset meta tags to homepage values
- Update static meta tags in index.html to use correct Netlify URLs and logo image
- Social media sharing now shows proper title, description, and header image for each review

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://snarkflix.com/">
+    <meta property="og:url" content="https://snarkflix.netlify.app/">
     <meta property="og:title" content="Snarkflix - Snarky Movie Reviews">
     <meta property="og:description" content="A snarky movie review blog with sharp wit and adorable Bernedoodle companion. Honest, humorous takes on cinema.">
-    <meta property="og:image" content="https://snarkflix.com/images/snarkflix-og-image.jpg">
+    <meta property="og:image" content="https://snarkflix.netlify.app/images/site-assets/logo.avif">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://snarkflix.com/">
+    <meta property="twitter:url" content="https://snarkflix.netlify.app/">
     <meta property="twitter:title" content="Snarkflix - Snarky Movie Reviews">
     <meta property="twitter:description" content="A snarky movie review blog with sharp wit and adorable Bernedoodle companion. Honest, humorous takes on cinema.">
-    <meta property="twitter:image" content="https://snarkflix.com/images/snarkflix-og-image.jpg">
+    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/site-assets/logo.avif">
 
     <title>Snarkflix - Snarky Movie Reviews</title>
     <link rel="stylesheet" href="styles.css">
