--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta property="og:title" content="Snarkflix - Snarky Movie Reviews">
     <meta property="og:description" content="A snarky movie review blog with sharp wit and adorable Bernedoodle companion. Honest, humorous takes on cinema.">
     <meta property="og:image" content="https://snarkflix.netlify.app/images/site-assets/logo.avif">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -20,6 +22,7 @@
     <meta property="twitter:title" content="Snarkflix - Snarky Movie Reviews">
     <meta property="twitter:description" content="A snarky movie review blog with sharp wit and adorable Bernedoodle companion. Honest, humorous takes on cinema.">
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/site-assets/logo.avif">
+    <meta property="twitter:image:alt" content="Snarkflix - Snarky Movie Reviews">
 
     <title>Snarkflix - Snarky Movie Reviews</title>
     <link rel="stylesheet" href="styles.css">
