Fix image file extensions from .png to .avif
- Fix Ghostbusters: Afterlife header image path (.png → .avif)
- Fix Eternals header image path (.png → .avif)
- Fix Free Guy header image path (.png → .avif)
- Regenerate all review pages with corrected image paths
- Images should now display properly on the site

--- a/review/34.html
+++ b/review/34.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://snarkflix.netlify.app/review/34">
     <meta property="og:title" content="Free Guy (2021) Review - SnarkAI Score: 50/100 | Snarkflix">
     <meta property="og:description" content="Free Guy (2021) - tldr: it seems to be an average, unremarkable film with some notable flaws. The critic seems disappointed with the movie's lack of originality and poor execution of its premise. Additionally, the unre...">
-    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/free-guy-2021/header-free-guy.png">
+    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/free-guy-2021/header-free-guy.avif">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Snarkflix">
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/34">
     <meta property="twitter:title" content="Free Guy (2021) Review - SnarkAI Score: 50/100 | Snarkflix">
     <meta property="twitter:description" content="Free Guy (2021) - tldr: it seems to be an average, unremarkable film with some notable flaws. The critic seems disappointed with the movie's lack of originality and poor execution of its premise. Additionally, the unre...">
-    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/free-guy-2021/header-free-guy.png">
+    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/free-guy-2021/header-free-guy.avif">
     <meta property="twitter:image:alt" content="Free Guy (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
 
