--- a/review/35.html
+++ b/review/35.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://snarkflix.netlify.app/review/35">
     <meta property="og:title" content="Eternals (2021) Review - SnarkAI Score: 70/100 | Snarkflix">
     <meta property="og:description" content="Eternals (2021) - tldr: Based on the review, I would assign this movie a score of 70. While the film has some visually great examples of how to do superpowers in new and interesting ways and is worth a watch if you wan...">
-    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.png">
+    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Snarkflix">
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/35">
     <meta property="twitter:title" content="Eternals (2021) Review - SnarkAI Score: 70/100 | Snarkflix">
     <meta property="twitter:description" content="Eternals (2021) - tldr: Based on the review, I would assign this movie a score of 70. While the film has some visually great examples of how to do superpowers in new and interesting ways and is worth a watch if you wan...">
-    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.png">
+    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/eternals-2021/header-eternals.avif">
     <meta property="twitter:image:alt" content="Eternals (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
 
