--- a/review/36.html
+++ b/review/36.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://snarkflix.netlify.app/review/36">
     <meta property="og:title" content="Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 50/100 | Snarkflix">
     <meta property="og:description" content="Ghostbusters: Afterlife (2021) - tldr: Based on the review, it seems like the movie heavily relies on nostalgia to carry the film rather than focusing on the story or characters. While the review does not outright say the movie is te...">
-    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.png">
+    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Snarkflix">
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/36">
     <meta property="twitter:title" content="Ghostbusters: Afterlife (2021) Review - SnarkAI Score: 50/100 | Snarkflix">
     <meta property="twitter:description" content="Ghostbusters: Afterlife (2021) - tldr: Based on the review, it seems like the movie heavily relies on nostalgia to carry the film rather than focusing on the story or characters. While the review does not outright say the movie is te...">
-    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.png">
+    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/ghostbusters-afterlife-2021/header-ghostbusters-afterlife.avif">
     <meta property="twitter:image:alt" content="Ghostbusters: Afterlife (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
 
