--- a/review/38.html
+++ b/review/38.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://snarkflix.netlify.app/review/38">
     <meta property="og:title" content="Zack Snyder's Justice League (2021) Review - SnarkAI Score: 41/100 | Snarkflix">
     <meta property="og:description" content="Zack Snyder's Justice League (2021) - tldr: If you've got a spare eon and enjoy seeing superheroes in a midlife crisis, this film's for you. 'Justice League: Snyder Cut' redefines 'epic' in length, if not in substance. A cinematic equival...">
-    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/zack-snyders-justice-league-2021/header-zack-snyders-justice-league.png">
+    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/zack-snyders-justice-league-2021/header-zack-snyders-justice-league.avif">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Snarkflix">
@@ -22,7 +22,7 @@
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/38">
     <meta property="twitter:title" content="Zack Snyder's Justice League (2021) Review - SnarkAI Score: 41/100 | Snarkflix">
     <meta property="twitter:description" content="Zack Snyder's Justice League (2021) - tldr: If you've got a spare eon and enjoy seeing superheroes in a midlife crisis, this film's for you. 'Justice League: Snyder Cut' redefines 'epic' in length, if not in substance. A cinematic equival...">
-    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/zack-snyders-justice-league-2021/header-zack-snyders-justice-league.png">
+    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/zack-snyders-justice-league-2021/header-zack-snyders-justice-league.avif">
     <meta property="twitter:image:alt" content="Zack Snyder's Justice League (2021) Review">
     <meta property="twitter:site" content="@snarkflix">
 
