Fix category counts and remove non-existent categories
Category Count Corrections:
- Action: 15 → 13 posts (correct count)
- Animation: 7 → 6 posts (correct count)
- Comedy: 3 posts (already correct)
- Drama: 6 → 4 posts (correct count)
- Adventure: 1 post (already correct)
- Sci-Fi: 11 → 4 posts (correct count)
- Horror: 4 → 2 posts (correct count)
- Musical: 2 → 3 posts (correct count)

Removed Non-Existent Categories:
- Removed Fantasy category (0 reviews)
- Removed duplicate Adventure category
- Removed duplicate Horror category
- Removed Western category (0 reviews)
- Removed Other category (0 reviews)

Categories now accurately reflect actual review data:
- Action: 13 reviews
- Animation: 6 reviews
- Comedy: 3 reviews
- Drama: 4 reviews
- Adventure: 1 review
- Sci-Fi: 4 reviews
- Horror: 2 reviews
- Musical: 3 reviews

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <img src="images/category-icons/Action.png" alt="Action" class="snarkflix-category-icon">
                     </div>
                     <h3>Action</h3>
-                    <span class="snarkflix-category-count">15 posts</span>
+                    <span class="snarkflix-category-count">13 posts</span>
                 </a>
                 <a href="#adventure" class="snarkflix-category-card" data-category="adventure">
                     <div class="snarkflix-category-image adventure-category">
@@ -122,20 +122,20 @@
                         <img src="images/category-icons/Animation.png" alt="Animation" class="snarkflix-category-icon">
                     </div>
                     <h3>Animation</h3>
-                    <span class="snarkflix-category-count">7 posts</span>
+                    <span class="snarkflix-category-count">6 posts</span>
                 </a>
                 <a href="#comedy" class="snarkflix-category-card" data-category="comedy">
                     <div class="snarkflix-category-image comedy-category">
                         <img src="images/category-icons/Comedy.png" alt="Comedy" class="snarkflix-category-icon">
                     </div>
                     <h3>Comedy</h3>
-                    <span class="snarkflix-category-count">8 posts</span>
+                    <span class="snarkflix-category-count">3 posts</span>
                 </a>
-                <a href="#crime-mystery" class="snarkflix-category-card" data-category="crime-mystery">
-                    <div class="snarkflix-category-image crime-mystery-category">
-                        <img src="images/category-icons/Comics.png" alt="Crime & Mystery" class="snarkflix-category-icon">
+                <a href="#adventure" class="snarkflix-category-card" data-category="adventure">
+                    <div class="snarkflix-category-image adventure-category">
+                        <img src="images/category-icons/Adventure.png" alt="Adventure" class="snarkflix-category-icon">
                     </div>
-                    <h3>Crime & Mystery</h3>
+                    <h3>Adventure</h3>
                     <span class="snarkflix-category-count">1 post</span>
                 </a>
                 <a href="#drama" class="snarkflix-category-card" data-category="drama">
@@ -143,56 +143,28 @@
                         <img src="images/category-icons/Drama.png" alt="Drama" class="snarkflix-category-icon">
                     </div>
                     <h3>Drama</h3>
-                    <span class="snarkflix-category-count">6 posts</span>
-                </a>
-                <a href="#fantasy" class="snarkflix-category-card" data-category="fantasy">
-                    <div class="snarkflix-category-image fantasy-category">
-                        <img src="images/category-icons/Fantasy.png" alt="Fantasy" class="snarkflix-category-icon">
-                    </div>
-                    <h3>Fantasy</h3>
-                    <span class="snarkflix-category-count">6 posts</span>
+                    <span class="snarkflix-category-count">4 posts</span>
                 </a>
                 <a href="#horror" class="snarkflix-category-card" data-category="horror">
                     <div class="snarkflix-category-image horror-category">
                         <img src="images/category-icons/Horror.png" alt="Horror" class="snarkflix-category-icon">
                     </div>
                     <h3>Horror</h3>
-                    <span class="snarkflix-category-count">4 posts</span>
+                    <span class="snarkflix-category-count">2 posts</span>
                 </a>
                 <a href="#scifi" class="snarkflix-category-card" data-category="scifi">
                     <div class="snarkflix-category-image scifi-category">
                         <img src="images/category-icons/SciFi.png" alt="Sci-Fi" class="snarkflix-category-icon">
                     </div>
                     <h3>Sci-Fi</h3>
-                    <span class="snarkflix-category-count">11 posts</span>
-                </a>
-                <a href="#thriller" class="snarkflix-category-card" data-category="thriller">
-                    <div class="snarkflix-category-image thriller-category">
-                        <img src="images/category-icons/Thriller.png" alt="Thriller" class="snarkflix-category-icon">
-                    </div>
-                    <h3>Thriller</h3>
-                    <span class="snarkflix-category-count">2 posts</span>
-                </a>
-                <a href="#western" class="snarkflix-category-card" data-category="western">
-                    <div class="snarkflix-category-image western-category">
-                        <img src="images/category-icons/Western.png" alt="Western" class="snarkflix-category-icon">
-                    </div>
-                    <h3>Western</h3>
-                    <span class="snarkflix-category-count">1 post</span>
+                    <span class="snarkflix-category-count">4 posts</span>
                 </a>
                 <a href="#musical" class="snarkflix-category-card" data-category="musical">
                     <div class="snarkflix-category-image musical-category">
                         <img src="images/category-icons/Musical.png" alt="Musical" class="snarkflix-category-icon">
                     </div>
                     <h3>Musical</h3>
-                    <span class="snarkflix-category-count">2 posts</span>
-                </a>
-                <a href="#other" class="snarkflix-category-card" data-category="other">
-                    <div class="snarkflix-category-image other-category">
-                        <img src="images/category-icons/Disaster.png" alt="Other" class="snarkflix-category-icon">
-                    </div>
-                    <h3>Other</h3>
-                    <span class="snarkflix-category-count">1 post</span>
+                    <span class="snarkflix-category-count">3 posts</span>
                 </a>
             </div>
         </div>
