Fix Sci-Fi category filtering
- Change data-category from 'scifi' to 'sci-fi' to match review data
- Reviews use 'sci-fi' (with hyphen) but HTML was using 'scifi' (no hyphen)
- This fixes the category filtering for Sci-Fi reviews
- 4 Sci-Fi reviews should now filter correctly

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <h3>Horror</h3>
                     <span class="snarkflix-category-count">2 posts</span>
                 </a>
-                <a href="#scifi" class="snarkflix-category-card" data-category="scifi">
+                <a href="#sci-fi" class="snarkflix-category-card" data-category="sci-fi">
                     <div class="snarkflix-category-image scifi-category">
                         <img src="images/category-icons/SciFi.png" alt="Sci-Fi" class="snarkflix-category-icon">
                     </div>
