--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="snarkflix-hero-image">
-                <img src="images/site-assets/logo.avif" alt="Snarkflix Logo" class="snarkflix-hero-logo">
+                <img src="images/site-assets/logo.avif" alt="Snarkflix Logo" class="snarkflix-hero-logo" loading="lazy">
             </div>
         </div>
     </section>
@@ -105,56 +105,56 @@
             <div class="snarkflix-categories-grid">
                 <a href="#action" class="snarkflix-category-card" data-category="action">
                     <div class="snarkflix-category-image action-category">
-                        <img src="images/category-icons/Action.png" alt="Action" class="snarkflix-category-icon">
+                        <img src="images/category-icons/Action.png" alt="Action" class="snarkflix-category-icon" loading="lazy">
                     </div>
                     <h3>Action</h3>
                     <span class="snarkflix-category-count">13 posts</span>
                 </a>
                 <a href="#adventure" class="snarkflix-category-card" data-category="adventure">
                     <div class="snarkflix-category-image adventure-category">
-                        <img src="images/category-icons/Adventure.png" alt="Adventure" class="snarkflix-category-icon">
+                        <img src="images/category-icons/Adventure.png" alt="Adventure" class="snarkflix-category-icon" loading="lazy">
                     </div>
                     <h3>Adventure</h3>
                     <span class="snarkflix-category-count">1 post</span>
                 </a>
                 <a href="#animation" class="snarkflix-category-card" data-category="animation">
                     <div class="snarkflix-category-image animation-category">
-                        <img src="images/category-icons/Animation.png" alt="Animation" class="snarkflix-category-icon">
+                        <img src="images/category-icons/Animation.png" alt="Animation" class="snarkflix-category-icon" loading="lazy">
                     </div>
                     <h3>Animation</h3>
                     <span class="snarkflix-category-count">6 posts</span>
                 </a>
                 <a href="#comedy" class="snarkflix-category-card" data-category="comedy">
                     <div class="snarkflix-category-image comedy-category">
-                        <img src="images/category-icons/Comedy.png" alt="Comedy" class="snarkflix-category-icon">
+                        <img src="images/category-icons/Comedy.png" alt="Comedy" class="snarkflix-category-icon" loading="lazy">
                     </div>
                     <h3>Comedy</h3>
                     <span class="snarkflix-category-count">3 posts</span>
                 </a>
                 <a href="#drama" class="snarkflix-category-card" data-category="drama">
                     <div class="snarkflix-category-image drama-category">
-                        <img src="images/category-icons/Drama.png" alt="Drama" class="snarkflix-category-icon">
+                        <img src="images/category-icons/Drama.png" alt="Drama" class="snarkflix-category-icon" loading="lazy">
                     </div>
                     <h3>Drama</h3>
                     <span class="snarkflix-category-count">4 posts</span>
                 </a>
                 <a href="#horror" class="snarkflix-category-card" data-category="horror">
                     <div class="snarkflix-category-image horror-category">
-                        <img src="images/category-icons/Horror.png" alt="Horror" class="snarkflix-category-icon">
+                        <img src="images/category-icons/Horror.png" alt="Horror" class="snarkflix-category-icon" loading="lazy">
                     </div>
                     <h3>Horror</h3>
                     <span class="snarkflix-category-count">2 posts</span>
                 </a>
                 <a href="#sci-fi" class="snarkflix-category-card" data-category="sci-fi">
                     <div class="snarkflix-category-image scifi-category">
-                        <img src="images/category-icons/SciFi.png" alt="Sci-Fi" class="snarkflix-category-icon">
+                        <img src="images/category-icons/SciFi.png" alt="Sci-Fi" class="snarkflix-category-icon" loading="lazy">
                     </div>
                     <h3>Sci-Fi</h3>
                     <span class="snarkflix-category-count">4 posts</span>
                 </a>
                 <a href="#musical" class="snarkflix-category-card" data-category="musical">
                     <div class="snarkflix-category-image musical-category">
-                        <img src="images/category-icons/Musical.png" alt="Musical" class="snarkflix-category-icon">
+                        <img src="images/category-icons/Musical.png" alt="Musical" class="snarkflix-category-icon" loading="lazy">
                     </div>
                     <h3>Musical</h3>
                     <span class="snarkflix-category-count">3 posts</span>
@@ -180,7 +180,7 @@
                     </p>
                 </div>
                 <div class="snarkflix-about-image">
-                    <img src="images/site-assets/merlin.png" alt="Merlin the Bernedoodle" class="snarkflix-about-logo">
+                    <img src="images/site-assets/merlin.png" alt="Merlin the Bernedoodle" class="snarkflix-about-logo" loading="lazy">
                 </div>
             </div>
         </div>
