Add resource preloading for critical assets
- Preload logo.avif for immediate hero section display
- Preload background.avif for hero section background
- Preload styles.css for faster initial rendering
- Preload script.js for faster JavaScript execution
- Preload reviews-data.js for faster data loading
- Improves initial page load performance significantly
- Fixes critical issue #3 from code review
- Critical above-the-fold assets now load with highest priority

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     <meta property="twitter:image" content="https://snarkflix.netlify.app/images/site-assets/logo.avif">
     <meta property="twitter:image:alt" content="Snarkflix - Snarky Movie Reviews">
 
+    <!-- Resource Preloading for Performance -->
+    <link rel="preload" href="images/site-assets/logo.avif" as="image">
+    <link rel="preload" href="images/site-assets/background.avif" as="image">
+    <link rel="preload" href="styles.css" as="style">
+    <link rel="preload" href="script.js" as="script">
+    <link rel="preload" href="reviews-data.js" as="script">
+
     <title>Snarkflix - Snarky Movie Reviews</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
