Add service worker for image caching and performance
- Create sw.js with comprehensive caching strategy
- Cache static assets: CSS, JS, images on install
- Implement cache-first strategy for images and static assets
- Implement network-first strategy for dynamic content
- Add cache cleanup on service worker updates
- Register service worker in index.html
- Improve offline experience and performance
- Fixes critical issue #4 from code review
- Images now load from cache on repeat visits

--- a/index.html
+++ b/index.html
@@ -215,5 +215,20 @@
 
     <script src="reviews-data.js"></script>
     <script src="script.js"></script>
+    
+    <!-- Service Worker Registration -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/sw.js')
+                    .then(registration => {
+                        console.log('Snarkflix Service Worker: Registered successfully', registration.scope);
+                    })
+                    .catch(error => {
+                        console.error('Snarkflix Service Worker: Registration failed', error);
+                    });
+            });
+        }
+    </script>
 </body>
 </html>
