Fix service worker registration for local development
- Add protocol check before registering service worker
- Service workers only work with HTTPS or localhost (not file://)
- Add informative console messages for different scenarios
- Prevents TypeError when running locally with file:// protocol
- Service worker will work properly when deployed to Netlify (HTTPS)
- Fixes console error in local development environment

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     
     <!-- Service Worker Registration -->
     <script>
-        if ('serviceWorker' in navigator) {
+        if ('serviceWorker' in navigator && (location.protocol === 'https:' || location.hostname === 'localhost' || location.hostname === '127.0.0.1')) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('/sw.js')
                     .then(registration => {
@@ -228,6 +228,10 @@
                         console.error('Snarkflix Service Worker: Registration failed', error);
                     });
             });
+        } else if (location.protocol === 'file:') {
+            console.log('Snarkflix Service Worker: Skipped - Service workers require HTTPS or localhost');
+        } else {
+            console.log('Snarkflix Service Worker: Not supported in this browser');
         }
     </script>
 </body>
