Add canonical URLs and breadcrumb navigation for better SEO
- Add canonical URL to index.html homepage
- Add canonical URLs to all generated review pages
- Add breadcrumb navigation with proper ARIA labels
- Style breadcrumb with clean, accessible design
- Include Home > Reviews > Current Review structure
- Update generate-review-pages.js to include canonical URLs
- Regenerate all review pages with canonical URLs
- Improve SEO and user navigation experience

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment">
     <meta name="author" content="Snarkflix">
     
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://snarkflix.netlify.app/">
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://snarkflix.netlify.app/">
@@ -58,6 +61,15 @@
             </div>
         </nav>
     </header>
+
+    <!-- Breadcrumb Navigation -->
+    <nav aria-label="Breadcrumb" class="snarkflix-breadcrumb">
+        <ol>
+            <li><a href="/">Home</a></li>
+            <li><a href="#reviews">Reviews</a></li>
+            <li aria-current="page">Current Review</li>
+        </ol>
+    </nav>
 
     <!-- Hero Section -->
     <section class="snarkflix-hero" role="banner">
