--- a/review/8.html
+++ b/review/8.html
@@ -7,6 +7,9 @@
     <meta name="keywords" content="movie reviews, film criticism, snarky reviews, cinema, movies, entertainment, To Me, the One Who Loved You (2022)">
     <meta name="author" content="Snarkflix">
     
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://snarkflix.netlify.app/review/8">
+    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://snarkflix.netlify.app/review/8">
