Add structured data (JSON-LD) for better SEO
- Add schema.org Blog markup to index.html
- Include blog name, description, and URL
- Add author information (Snarkflix Reviewer)
- Add publisher organization with logo
- Improve search engine understanding of content
- Enable rich snippets in search results
- Follow Google's structured data guidelines
- Enhance SEO and discoverability

--- a/index.html
+++ b/index.html
@@ -39,6 +39,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Blog",
+      "name": "Snarkflix",
+      "description": "Snarky movie reviews with sharp wit and adorable Bernedoodle companion",
+      "url": "https://snarkflix.netlify.app",
+      "author": {
+        "@type": "Person",
+        "name": "Snarkflix Reviewer"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "Snarkflix",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://snarkflix.netlify.app/images/site-assets/logo.avif"
+        }
+      }
+    }
+    </script>
 </head>
 <body>
     <!-- Header -->
