--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
       }
     }
     </script>
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8SV8W7XL64');
+    </script>
 </head>
 <body>
     <!-- Header -->
