--- a/review/25.html
+++ b/review/25.html
@@ -31,6 +31,16 @@
 
     <title>The Batman (2022) Review - SnarkAI Score: 40/100 | Snarkflix</title>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8SV8W7XL64"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-8SV8W7XL64');
+    </script>
+    
     <script>
         // Redirect to the main page with the review parameter
         window.location.href = 'https://snarkflix.netlify.app/?review=25';
