--- a/review/7.html
+++ b/review/7.html
@@ -24,7 +24,7 @@
     <meta property="og:url" content="https://snarkflix.netlify.app/review/7">
     <meta property="og:title" content="The Marvels (2023) Review - SnarkAI Score: 68/100 | Snarkflix">
     <meta property="og:description" content="The Marvels (2023) - tldr: "The Marvels" is like a cosmic joyride with a few flat tires along the way. Iman Vellani's Kamala Khan brings a nerdy enthusiasm that's as refreshing as finding an untouched slice of pizza the m...">
-    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-marvels/header-the-marvels.avif">
+    <meta property="og:image" content="https://snarkflix.netlify.app/images/reviews/the-marvels/header-the-marvels.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Snarkflix">
@@ -34,7 +34,7 @@
     <meta property="twitter:url" content="https://snarkflix.netlify.app/review/7">
     <meta property="twitter:title" content="The Marvels (2023) Review - SnarkAI Score: 68/100 | Snarkflix">
     <meta property="twitter:description" content="The Marvels (2023) - tldr: "The Marvels" is like a cosmic joyride with a few flat tires along the way. Iman Vellani's Kamala Khan brings a nerdy enthusiasm that's as refreshing as finding an untouched slice of pizza the m...">
-    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/the-marvels/header-the-marvels.avif">
+    <meta property="twitter:image" content="https://snarkflix.netlify.app/images/reviews/the-marvels/header-the-marvels.png">
     <meta property="twitter:image:alt" content="The Marvels (2023) Review">
     <meta property="twitter:site" content="@snarkflix">
 
